<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.utwente.groove</groupId>
	<artifactId>groove</artifactId>
	<version>6.4.0-SNAPSHOT</version>
	<build>
		<plugins>
			<!-- Invoking the Eclipse compiler, see https://stackoverflow.com/questions/33164976/using-eclipse-java-compiler-ecj-in-maven-builds -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<compilerId>eclipse</compilerId>
					<source>17</source>
					<target>17</target>
					<!-- Passing arguments is a trainwreck, see https://issues.apache.org/jira/browse/MCOMPILER-123 -->
					<compilerArguments>
						<properties>${project.basedir}/.settings/org.eclipse.jdt.core.prefs</properties>
					</compilerArguments>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
				</configuration>

				<dependencies>
					<dependency>
						<groupId>org.codehaus.plexus</groupId>
						<artifactId>plexus-compiler-eclipse</artifactId>
						<version>2.12.1</version>
					</dependency>

					<dependency>
						<groupId>org.eclipse.jdt</groupId>
						<artifactId>ecj</artifactId>
						<version>3.31.0</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<additionalOptions>-Xdoclint:none</additionalOptions>
					<reportOutputDirectory>target</reportOutputDirectory>
					<destDir>javadoc</destDir>
				</configuration>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>src/main/java/nl/utwente/groove/control/parse</directory>
				<includes>
					<include>Ctrl.g</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/java/nl/utwente/groove/io/conceptual/configuration</directory>
				<includes>
					<include>ConfigSchema.xsd</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.test.skip>true</maven.test.skip>
	</properties>

	<dependencies>
		<dependency>
			<groupId>au.com.bytecode</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>jakarta.activation</groupId>
			<artifactId>jakarta.activation-api</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.jgoodies</groupId>
			<artifactId>jgoodies-common</artifactId>
			<version>1.8.1</version>
		</dependency>
		<dependency>
			<groupId>com.jgoodies</groupId>
			<artifactId>jgoodies-looks</artifactId>
			<version>2.5.3</version>
		</dependency>
		<dependency>
			<groupId>jgraph</groupId>
			<artifactId>jgraph</artifactId>
			<version>5.13.0.0</version>
		</dependency>
		<dependency>
			<groupId>args4j</groupId>
			<artifactId>args4j</artifactId>
			<version>2.0.26</version>
		</dependency>
		<dependency>
			<groupId>org.apache.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>4.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.3.4</version>
		</dependency>
		<dependency>
			<groupId>com.fifesoft</groupId>
			<artifactId>rsyntaxtextarea</artifactId>
			<version>1.5.2</version>
		</dependency>
		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.11.0</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>xml-resolver</groupId>
			<artifactId>xml-resolver</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr-complete</artifactId>
			<version>3.5.2</version>
			<exclusions>
				<exclusion>
					<groupId>org.antlr</groupId>
					<artifactId>antlr-runtime</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.antlr</groupId>
					<artifactId>antlr</artifactId>
				</exclusion>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlrworks</artifactId>
			<version>1.5.2</version>
			<exclusions>
				<exclusion>
					<groupId>org.antlr</groupId>
					<artifactId>antlr-runtime</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.antlr</groupId>
					<artifactId>antlr</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jdt</groupId>
			<artifactId>org.eclipse.jdt.annotation</artifactId>
			<version>2.2.700</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.ecore</artifactId>
			<version>2.7.0-v20110605-0747</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.common</artifactId>
			<version>2.7.0-v20110605-0747</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
			<version>2.7.0-v20110520-1406</version>
		</dependency>
		<dependency>
    		<groupId>org.apache.xmlgraphics</groupId>
    		<artifactId>batik-all</artifactId>
    		<version>1.17</version>
    		<exclusions>
				<exclusion>
				    <groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Local libraries -->
		<dependency>
			<groupId>nl.utwente.groove</groupId>
			<artifactId>gnuprologjava</artifactId>
			<version>0.2.6</version>
		</dependency>
		<dependency>
			<groupId>nl.utwente.groove</groupId>
			<artifactId>ltl2buchi</artifactId>
			<version>2010.12</version>
		</dependency>
		<dependency>
			<groupId>nl.utwente.groove</groupId>
			<artifactId>osxadapter</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>nl.utwente.groove</groupId>
			<artifactId>groove-gxl</artifactId>
			<version>3.0</version>
		</dependency>
	</dependencies>
</project>